Revision history for DBIx::Class

    * New Features / Changes
        - A new zero-to-DBIC style manual: DBIx::Class::Manual::QuickStart

    * Fixes
        - Setting quote_names propagates to SQL::Translator when producing
          SQLite DDL (it is one of the few producers *NOT* quoting by default)
        - Back out self-cleaning from DBIx::Class::Carp for the time being
          (as a side effect fixes RT#86267)
        - Tests no longer fail if $ENV{DBI_DSN} is set

    * Misc
        - Replace $row with $result in all docs to be consistent and to
          clarify various return values

0.08250 2013-04-29 22:00 (UTC)
    * New Features / Changes
        - Rewrite from scratch the result constructor codepath - many bugfixes
          and performance improvements (the current codebase is now capable of
          outperforming both DBIx::DataModel and Rose::DB::Object on some
          workloads). Some notable benefits:
          - Multiple has_many prefetch
          - Partial prefetch - you now can select only columns you are
            interested in, while preserving the collapse functionality
            (collapse is now exposed as a first-class API attribute)
          - Prefetch of resultsets with arbitrary order
            (RT#54949, RT#74024, RT#74584)
          - Prefetch no longer inserts right-side table order_by clauses
            (massively helps the deficient MySQL optimizer)
          - Prefetch with limit on right-side ordered resultsets now works
            correctly (via aggregated grouping)
          - No longer order the insides of a complex prefetch subquery,
            unless required to satisfy a limit
          - Stop erroneously considering order_by criteria from a join under
            distinct => 1 (the distinct should apply to the main source only)
        - Massively optimize codepath around ->cursor(), over 10x speedup
          on some iterating workloads.