@@ -4,6 +4,9 @@ Revision history for DBIx::Class
         - A new zero-to-DBIC style manual: DBIx::Class::Manual::QuickStart
 
     * Fixes
+        - More robust handling of circular relationship declarations by loading
+          foreign classes less frequently (should resolve issues like
+          http://lists.scsys.co.uk/pipermail/dbix-class/2013-June/011374.html)
         - Setting quote_names propagates to SQL::Translator when producing
           SQLite DDL (it is one of the few producers *NOT* quoting by default)
         - Back out self-cleaning from DBIx::Class::Carp for the time being
